#27: Fix some spacing and incorrectly implemented buttons in html/css

--- a/src/Web/public/css/individual-heart-beat-style.css
+++ b/src/Web/public/css/individual-heart-beat-style.css
@@ -94,6 +94,8 @@ p {
   background-color:white;
   border: none;
   font-family: "Audiowide", sans-serif;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 15px;
 }
 
 .nextUserButton-container {
@@ -102,10 +104,7 @@ p {
   justify-content: center;
 }
 
-#nextUserButton {
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  border-radius: 15px;
-}
+
 
 #nextUserButton:hover {
   background-color:rgb(141, 141, 141);
@@ -126,7 +125,7 @@ p {
   cursor: pointer;
 }
 
-.forward-button {
+.next-button {
   background-color: rgb(255, 255, 255);
   border-radius: 30px;
   border: none;
@@ -136,7 +135,7 @@ p {
   font-family: "Audiowide", sans-serif;
 }
 
-.forward-button:hover {
+.next-button:hover {
   background-color: rgb(141, 141, 141);
   cursor: pointer;
 }
